--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>What are you're favorite topics?</header>
+    <header><h1>What are you're favorite topics?</h1></header>
 
     <div id="topicsButton"></div>
 
